# HiAnimeDownloader

./: .gitignore  README.md  main.pyw  pyproject.toml  requirements.txt  version.py
backend/: anime_service.py
downloader/: anime_service.py
gui/: about_dialog.py  helpers.py  main_window.py  settings_dialog.py  ui_about_dialog.py  ui_main_window.py  ui_settings_dialog.py
yt_dlp_plugins/extractor/: hianime.py
