[project]
name = "hianimedownloader"
version = "1.0.0"
description = "GUI application to search and download anime from hianime"
authors = [
    {name = "Pratik Patel",email = "pratikpatel8982@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4)",
    "pip-system-certs (>=5.2)",
    "yt-dlp (>=2025.8.11)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "yt-dlp-hianime @ https://github.com/pratikpatel8982/yt-dlp-hianime/archive/master.zip"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
